# rwa

./: .dockerignore  .flake8  .gitignore  .vercelignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Procfile  README.md  SECURITY.md  env.example  fly.toml  pyproject.toml  railway.json  render.yaml  requirements-dev.txt  requirements.txt  vercel.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
api/: __init__.py  auth.py  config.py  main.py
api/routers/: __init__.py  compliance.py  data_ingestion.py  energy.py  nrw.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  MATHEMATICAL-MODELS.md  MVRI-SPECIFICATION.md
frontend/: .prettierrc  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: CompliancePage.tsx  Dashboard.tsx  DataPage.tsx  EnergyPage.tsx  LoginPage.tsx  NRWPage.tsx
frontend/src/store/: auth.ts
scripts/: init_db.py
src/: __init__.py
src/compliance/: __init__.py  obligation_tracking.py  report_generation.py  risk_scoring.py
src/energy/: __init__.py  cost_optimization.py  efficiency_analysis.py  pump_scheduling.py
src/models/: __init__.py  database.py  schemas.py
src/nrw/: __init__.py  leak_detection.py  mnf_analysis.py  water_balance.py
tests/: __init__.py  conftest.py
tests/test_api/: test_main.py
tests/test_compliance/: __init__.py  test_obligation_tracking.py
tests/test_energy/: __init__.py  test_pump_scheduling.py
tests/test_nrw/: __init__.py  test_water_balance.py
